Add padding-right for .typing-text

--- a/styles.css
+++ b/styles.css
@@ -226,8 +226,12 @@ a{
     
     #welcome-text{
         align-content: space-around;
-        height: auto;
+        height: fit-content;
         
+    }
+
+    .typing-text{
+        padding-right: 2rem;
     }
 
     .hi,.name{
