--- a/styles.css
+++ b/styles.css
@@ -145,9 +145,11 @@ a{
 
 
 #projects-grid{
-    display: grid;    
-    grid-auto-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-auto-rows: 20rem 20rem;
+    display: grid; 
+    
+    
+    
+    grid-auto-rows: 30rem 30rem;
     grid-gap: 5rem;
     width: 100%;
     padding: 5rem;
@@ -158,7 +160,8 @@ a{
     object-fit: cover; 
     object-position: top;    
     width:  100%;
-    max-height: calc(100% - 4.1rem);    
+    height: 100%;  
+     
 }
 
 .project-title{
@@ -175,6 +178,13 @@ a{
 #project-heading{
     margin-top: 3rem;
     margin-bottom: 2rem;
+    
+}
+
+.project-tile{
+    display: flex;
+    flex-direction: column;
+    
     
 }
 
@@ -237,5 +247,9 @@ a{
 
     .hi,.name{
         font-size: 5rem;
+    }
+
+    .project-tile { 
+        grid-template-columns: repeat(2, 1fr); 
     }
 }
