Change project tile for hover effect
Trying to get hover effect to work for project tiles

--- a/styles.css
+++ b/styles.css
@@ -146,9 +146,6 @@ a{
 
 #projects-grid{
     display: grid; 
-    
-    
-    
     grid-auto-rows: 30rem 30rem;
     grid-gap: 5rem;
     width: 100%;
@@ -161,8 +158,30 @@ a{
     object-position: top;    
     width:  100%;
     height: 100%;  
+    opacity: 1; 
+    transition: .5s ease;
+    backface-visibility: hidden;
      
 }
+
+.project-tile:hover .project-image {
+    opacity: 0.3;
+}
+  
+.project-tile:hover .middle {
+    opacity: 1;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
 
 .project-title{
     background-color: #ffffff;
