--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,7 @@ a{
     width: 100%;
     opacity: 0;
     transition: 1s ease;
-    background-color: rgba(243, 243, 243, 0.993);
+    background-color: rgba(236, 235, 235, 0.993);
   }
   
   .project-tile:hover .overlay {
@@ -190,7 +190,8 @@ a{
   
   .text {
     color: black;
-    font-size: 20px;
+    font-family: 'Inconsolata', monospace;
+    font-size: 1.5rem;
     position: absolute;
     top: 50%;
     left: 50%;
